# cmake-intro

./: README.md
1-0-IntroductionToTheBasics/: CMakeLists.txt
1-1-VariablesAndTheCache/: CMakeLists.txt
1-2-ProgrammingInCMake/: CMakeLists.txt
1-3-CommunicationWithYourCode/: CMakeLists.txt
1-4-HowToStructureYourProject/: README.md
